fixing layout issues

--- a/src/less/_site-layout.less
+++ b/src/less/_site-layout.less
@@ -82,7 +82,7 @@
   margin: 0;
 }
 
-.entry-header {
+:not(.post-list) .entry-title {
   margin-top: 5rem;
 }
 
@@ -143,9 +143,11 @@
 
 .page-header {
   max-width: 700px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   @media (min-width: 980px) {
-    margin: 0;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
@@ -163,6 +165,22 @@
     flex-grow: 1;
     margin-right: 0.5rem;
   }
+}
+
+.main-content-row:not(.post-list) .entry-content > :last-child:not(.alignfull) {
+  padding-bottom: 5rem;
+}
+
+.alignfull img {
+  width: 100vw;
+}
+
+.alignfull + :not(.alignfull) {
+  margin-top: 5rem;
+}
+
+.alignfull + .alignfull {
+  margin-top: 0;
 }
 
 @media (min-width: 980px) {
