--- a/src/less/gutenberg/_gutenberg-utilities.less
+++ b/src/less/gutenberg/_gutenberg-utilities.less
@@ -19,22 +19,6 @@
   margin-top: 2.5rem;
 }
 
-.entry-content > :last-child:not(.alignfull) {
-  padding-bottom: 5rem;
-}
-
-.alignfull img {
-  width: 100vw;
-}
-
-.alignfull + :not(.alignfull) {
-  margin-top: 2.5rem;
-}
-
-.alignfull + .alignfull {
-  margin-top: 0;
-}
-
 .has-blue-dark-background-color {
   background-color: @site-color-blue-dark;
 }
